--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@rollup/plugin-typescript": "^11.1.5",
-    "rollup": "^4.9.1"
+    "rollup": "^4.9.1",
+    "tslib": "^2.6.2"
   }
 }
